fixed too vague css usage causing invisible text

--- a/css_styles/style.scss
+++ b/css_styles/style.scss
@@ -42,11 +42,15 @@ h1, h3, h5, p {
 
 a {
     text-decoration: none;
-    color: white;
+    color: $background;
 }
 
 iframe {
     width: 100%;
     height: 500px;
     border: 5px solid black;
+}
+
+#payment-success a {
+    color: $textColour;
 }
